fix bootstap nested fluid layout bug

--- a/css/StyleSheets.css
+++ b/css/StyleSheets.css
@@ -96,3 +96,6 @@ section
 {
     position:relative;
 }
+.row-fluid .span6 {
+    width: 48.9%;/*fix bootstap nested fluid layout bug*/
+}
